2013-12-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Do not report DATA-PATH error if a device is
	  not found.

2013-12-20  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c: Add a trailling '/' on directory entry
	  in the index.
	* man/xml-source/ambsdtar.8.xml: Say that restore never remove files.

2013-12-20  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Fix for CURLE_SSL_CACERT_BADFILE.

2013-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Run sw_vers to find Mac platform.

2013-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Change state if now loaded.
	* server-src/amtape.pl (inventory): Print empty slot.

2013-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c: Some fixes.

2013-12-17  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c: Print the 'sendbackup: end' line.

2013-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/Makefile.am: Add ambsdtar.
	* application-src/ambsdtar.c: New application script for BSD tar
	* application-src/amgtar.c: Call dbclose()
	* application-src/amstar.c: Call dbclose()
	* client-src/calcsize.c: Handle BSDTAR
	* config/amanda/dumpers.m4 (AMANDA_PROG_BSDTAR): function to find
	  bsdtar binary.
	* configure.in: Call AMANDA_PROG_BSDTAR
	* man/Makefile.am: Add ambsdtar.8
	* man/entities/global.entities.in: Add bsdtar.
	* man/xml-source/ambsdtar.8.xml: New ambsdtar man page
	* perl/Amanda/Constants.pm.in: Add $BSDTAR
	* NEWS, ReleaseNotes: Add ambsdtar

2013-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Fix if header have only one
	  application property.

2013-12-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c(update_info_taper): Log a message if label is
	  not set.

2013-12-03  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS, ReleaseNotes: Changes in 3.3.5